fix: update text align (#19)

--- a/src/styles/components/_birthdayCard.scss
+++ b/src/styles/components/_birthdayCard.scss
@@ -39,7 +39,7 @@
     font-weight: 600;
     font-size: 16px;
     line-height: 19px;
-    text-align: center;
+    text-align: left;
     text-transform: capitalize;
     color: $black;
   }
